--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>org.jboss.sasl</groupId>
     <artifactId>jboss-sasl</artifactId>
-    <version>1.0.0.Beta1</version>
+    <version>1.0.0.Beta1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.jboss</groupId>
