--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,12 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <systemPropertyVariables>
+                      <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                      <log4j.defaultInitOverride>true</log4j.defaultInitOverride>
+                    </systemPropertyVariables>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <trimStackTrace>false</trimStackTrace>
-                     <!-- Modules ignores Class-Path -->
-                    <useManifestOnlyJar>false</useManifestOnlyJar>
                     <printSummary>true</printSummary>
                     <includes>
                         <include>**/*Test.java</include>
@@ -55,14 +57,7 @@
                     <forkMode>always</forkMode>
                 </configuration>
             </plugin>
-<!-- 
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <artifactId>maven-source-plugin</artifactId>
-            </plugin>
--->
+            
             <!-- Bytecode plugin for version string in Main -->
             <plugin>
                 <groupId>org.jboss.maven.plugins</groupId>
@@ -130,21 +125,49 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jboss.logmanager</groupId>
+            <artifactId>jboss-logmanager</artifactId>
+            <version>1.5.0.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.logmanager</groupId>
+            <artifactId>jboss-logmanager-log4j</artifactId>
+            <version>1.0.0.CR2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
-            <version>3.1.1.GA</version>
+            <version>3.1.3.GA</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging-processor</artifactId>
-            <version>1.0.3.Final</version>
-            <scope>provided</scope>
+            <version>1.2.0.Beta1</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+            <scope>test</scope>
         </dependency>
         
         <!-- 
               Test Scope Only
          -->
-         
+        <dependency>
+            <groupId>org.apache.directory.api</groupId>
+            <artifactId>api-asn1-api</artifactId>
+            <version>1.0.0-M21</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.directory.api</groupId>
+            <artifactId>api-asn1-ber</artifactId>
+            <version>1.0.0-M21</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.directory.api</groupId>
             <artifactId>api-ldap-codec-core</artifactId>
@@ -191,6 +214,18 @@
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-core-api</artifactId>
+            <version>2.0.0-M16</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-interceptor-kerberos</artifactId>
+            <version>2.0.0-M16</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-kerberos-codec</artifactId>
             <version>2.0.0-M16</version>
             <scope>test</scope>
         </dependency>
