--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -21,11 +21,13 @@
 #
 
 # Additional logger names to configure (root logger is always configured)
-loggers=org.apache.directory
+loggers=org.apache.directory,net.sf.ehcache,org.apache.directory.api.ldap
 
 # Root logger configuration
 logger.level=${test.level:TRACE}
 logger.org.apache.directory.level=INFO
+logger.org.apache.directory.api.ldap.level=OFF
+logger.net.sf.ehcache.level=INFO
 logger.handlers=CONSOLE
 
 # Console handler configuration
