--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.sasl</groupId>
-    <artifactId>jboss-sasl</artifactId>
+    <groupId>org.wildfly.security</groupId>
+    <artifactId>wildfly-sasl</artifactId>
     <version>2.0.0.Alpha1-SNAPSHOT</version>
 
     <parent>
