Follow on changes after rebasing to use the Apache 2.0 license and to use the org.wildfly.sasl parent package name.
Also updated the tests to use a realm called WILDFLY.ORG

--- a/src/test/resources/krb5.conf
+++ b/src/test/resources/krb5.conf
@@ -1,5 +1,5 @@
 [libdefaults]
-	default_realm = JBOSS.ORG
+	default_realm = WILDFLY.ORG
 	default_tgs_enctypes = des-cbc-md5,des3-cbc-sha1-kd
 	default_tkt_enctypes = des-cbc-md5,des3-cbc-sha1-kd
 	kdc_timeout = 5000
@@ -9,7 +9,7 @@
 	forwardable = true
 
 [realms]
-	JBOSS.ORG = {
+	WILDFLY.ORG = {
 		kdc = localhost:6088
 	}
 
